# argus

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
argus/: __init__.py  _cache.py  _compression.py  _config.py  _util.py  argus.py  auth.py  decorators.py  exceptions.py  hosts.py  multi_index.py
argus/asynchronous/: __init__.py  _workers_pool.py  async_argus.py  async_utils.py
argus/chunkstore/: _chunker.py  chunkstore.py  date_chunker.py  utils.py
argus/date/: __init__.py  _daterange.py  _mktz.py  _util.py
argus/fixtures/: argus.py
argus/scripts/: argus_copy_data.py  argus_create_user.py  argus_delete_library.py  argus_enable_sharding.py  argus_fsck.py  argus_init_library.py  argus_list_libraries.py  argus_prune_versions.py  utils.py
argus/serialization/: incremental.py  numpy_arrays.py  numpy_records.py
argus/store/: _ndarray_store.py  _pandas_ndarray_store.py  _pickle_store.py  _version_store_utils.py  audit.py  bitemporal_store.py  bson_store.py  metadata_store.py  version_store.py  versioned_item.py
argus/tickstore/: tickstore.py  toplevel.py
benchmarks/: benchmarks.py  fast_serializable_check.py
benchmarks/async/: async_benchmark.py
benchmarks/fwd_pointers/: fwd_benchmarks.py
benchmarks/lz4_tuning/: README.txt  benchmark_lz4.py
test-results/: junit.xml
tests/: base.py  base2.py  common.py  config.py  conftest.py  thread.py  util.py
tests/integration/: test_argus.py  test_argus_multithreading.py  test_async_argus.py  test_compress_integration.py  test_concurrent_append.py  test_decorators.py  test_utils.py
(+64 files in other folders)
